--- a/AirQuality/templates/index.html
+++ b/AirQuality/templates/index.html
@@ -27,20 +27,20 @@
     </div>
     <div class="form-group w-50 p-3">
         <label for="text">time:</label>
-        <input type="text" class="form-control" name="Time" placeholder=" Enter time " id="month">
+        <input type="text" class="form-control" name="time" placeholder=" Enter time " id="month">
     </div>
     <div class="form-group w-50 p-3">
         <label for="text">CO:</label>
-        <input type="text" class="form-control" name="CO" placeholder="Enter CO " id="month">
+        <input type="text" class="form-control" name="co" placeholder="Enter CO " id="month">
     </div>
     <div class="form-group w-50 p-3">
         <label for="text ">PT08:</label>
-        <input type="text" class="form-control " name="PT08" placeholder="Enter PTO8" id="month">
+        <input type="text" class="form-control " name="pt08" placeholder="Enter PTO8" id="month">
     </div>
 
     <div class="form-group w-50 p-3">
         <label for="text">NMHC:</label>
-        <input type="text" class="form-control" name="NMHC" placeholder="Enter NMHC" id="month">
+        <input type="text" class="form-control" name="nmhc" placeholder="Enter NMHC" id="month">
     </div>
 
       <p>
