--- a/AirQuality/templates/index.html
+++ b/AirQuality/templates/index.html
@@ -37,10 +37,18 @@
         <label for="text ">PT08:</label>
         <input type="text" class="form-control " name="pt08" placeholder="Enter tin oxide between 500 to 2000" id="month">
     </div>
+    <div class="form-group w-50 p-3">
+        <label for="text ">PT08:</label>
+        <input type="text" class="form-control " name="Benzene" placeholder="Enter Benzene value between 0 to 60" id="month">
+    </div>
+    <div class="form-group w-50 p-3">
+        <label for="text ">PT08:</label>
+        <input type="text" class="form-control " name="NOx" placeholder="Enter NOx value between 0 to 1500" id="month">
+    </div>
 
     <div class="form-group w-50 p-3">
         <label for="text">NMHC:</label>
-        <input type="text" class="form-control" name="nmhc" placeholder="Enter non metallic hydro carbon conc. between 0 to 1000" id="month">
+        <input type="text" class="form-control" name="NO2" placeholder="Enter NO2 value between 0 to 350" id="month">
     </div>
 
       <p>
