--- a/AirQuality/templates/index.html
+++ b/AirQuality/templates/index.html
@@ -38,16 +38,16 @@
         <input type="text" class="form-control " name="pt08" placeholder="Enter tin oxide between 500 to 2000" id="month">
     </div>
     <div class="form-group w-50 p-3">
-        <label for="text ">PT08:</label>
+        <label for="text ">Benzene:</label>
         <input type="text" class="form-control " name="Benzene" placeholder="Enter Benzene value between 0 to 60" id="month">
     </div>
     <div class="form-group w-50 p-3">
-        <label for="text ">PT08:</label>
+        <label for="text ">NOx:</label>
         <input type="text" class="form-control " name="NOx" placeholder="Enter NOx value between 0 to 1500" id="month">
     </div>
 
     <div class="form-group w-50 p-3">
-        <label for="text">NMHC:</label>
+        <label for="text">NO2:</label>
         <input type="text" class="form-control" name="NO2" placeholder="Enter NO2 value between 0 to 350" id="month">
     </div>
 
