--- a/AirQuality/templates/index.html
+++ b/AirQuality/templates/index.html
@@ -12,7 +12,10 @@
 <center>
 <h1>Air Humidity Prediction</h1>
 <h6>Developed by Shivananda Sonawane and Siddhesh Gudghe</h6>
-<form method="POST">
+<p>
+  <h5><strong>{{errors}}</strong></h5>
+  </p>
+  <form method="POST">
     <div class="form-group w-50 p-3">
         <label for="text">year:</label>
         <input type="text" class="form-control" name="year" placeholder="Enter either 2004 or 2005" id="email">
